# audiofp

./: .gitignore  CHANGELOG.md  CHANGELOG.md.bak  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USAGE.md  audio.md  clippy.toml  deny.toml  future.md  rust-toolchain.toml  rustfmt.toml
.commandcode/taste/: taste.md
.github/workflows/: ci.yml
benches/: extract.rs  neural_frontend.rs  streaming.rs
examples/: compare_algorithms.rs  enroll_file.rs  hash_matcher.rs  match_two_files.rs  stream_buffer.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: haitsma_hash_roundtrip.rs  panako_hash_roundtrip.rs  sinc_resampler.rs  streaming_haitsma_equiv.rs  streaming_panako_equiv.rs  streaming_wang_equiv.rs  wang_hash_roundtrip.rs
src/: error.rs  fp.rs  hash.rs  lib.rs  matcher.rs  types.rs
src/classical/: haitsma.rs  mod.rs  panako.rs  wang.rs
src/dsp/: mel.rs  mod.rs  peaks.rs  resample.rs  stft.rs  windows.rs
src/io/: decoder.rs  mod.rs
src/neural/: embedder.rs  frontend.rs  mod.rs  streaming.rs  test_support.rs
src/watermark/: detector.rs  mod.rs
tests/: neural.rs  property.rs  regression.rs  robustness.rs
