[package]
name         = "afp"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85.0"
license      = "MIT"
description  = "Audio fingerprinting SDK: Wang, Panako, Haitsma–Kalker, neural (ONNX), watermark, streaming."
repository   = "https://github.com/themankindproject/afp"
authors      = ["bravo1goingdark <kumarashutosh34169@gmail.com>"]
keywords     = ["audio", "fingerprint", "dsp", "shazam", "panako"]
categories   = ["multimedia::audio", "algorithms", "no-std"]
readme       = "README.md"

[features]
default = ["std"]

# Pulls cpal/symphonia/rubato and the streaming orchestrator. Without it the
# crate compiles `no_std + alloc` (DSP + classical fingerprinters only).
std = []

# ONNX-based neural fingerprinter (Resona-FP). Requires std.
neural = ["std"]

# AudioSeal-compatible watermark detector. Requires std.
watermark = ["std"]

# Install mimalloc as the process-wide #[global_allocator]. Requires std.
# Off by default because libraries should not pick the allocator on behalf of
# downstream binaries; flip this into `default` if you want it always-on.
mimalloc = ["std", "dep:mimalloc"]

[dependencies]
thiserror   = { version = "2", default-features = false }
mimalloc    = { version = "0.1", default-features = false, optional = true }
libm        = "0.2"
num-traits  = { version = "0.2", default-features = false, features = ["libm"] }
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
realfft     = { version = "3.4", default-features = false }
bytemuck    = { version = "1.18", features = ["derive"] }

[dev-dependencies]
approx = "0.5"

[lib]
name = "afp"
path = "src/lib.rs"
